--- a/nPuzzle/front/nicepage.css
+++ b/nPuzzle/front/nicepage.css
@@ -18419,8 +18419,9 @@ a.pswp__share--download:hover {
   pointer-events: none;
 }
 .u-repeater {
+  margin-top: 200px;
   display: grid;
-  grid-template-columns: repeat(3, 33.33333333%);
+  grid-template-columns: repeat(4, 23%);
 }
 .u-repeater-item {
   display: flex;
